tests/build/cases/widget_new/missing_semi1.stderr
error: expected `;`
 --> cases/widget_new/missing_semi1.rs:8:9
  |
8 |         enabled = true;
  |         ^^^^^^^
